--- a/oauth2-sso-client-member/src/main/resources/templates/member/list.html
+++ b/oauth2-sso-client-member/src/main/resources/templates/member/list.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>会员列表</title>
 
-    <link type="text/css" rel="stylesheet" th:href="@{/bootstrap/css/bootstrap.min.css}">
+    <link type="text/css" rel="stylesheet" th:href="@{/static/bootstrap/css/bootstrap.min.css}">
 
 </head>
 <body>
@@ -23,21 +23,21 @@
         <td>驱邪师</td>
         <td>蓝二公子</td>
         <td>2019-03-01</td>
-        <td><a th:href="@{/member/detail}">详情</a> </td>
+        <td><a th:href="@{/templates/member/detail}">详情</a></td>
     </tr>
     <tr>
         <td style="font-size: 20px;">魏无羡</td>
         <td>魔道祖师</td>
         <td>云梦江氏大弟子</td>
         <td>2019-03-02</td>
-        <td><a th:href="@{/member/detail}">详情</a> </td>
+        <td><a th:href="@{/templates/member/detail}">详情</a></td>
     </tr>
     <tr>
         <td style="font-size: 20px;">苏沐橙</td>
         <td>枪炮师</td>
         <td>一流女玩家</td>
         <td>2019-03-03</td>
-        <td><a th:href="@{/member/detail}">详情</a> </td>
+        <td><a th:href="@{/templates/member/detail}">详情</a></td>
     </tr>
 </table>
 </body>
