--- a/oauth2-sso-client-order/src/main/resources/templates/order/list.html
+++ b/oauth2-sso-client-order/src/main/resources/templates/order/list.html
@@ -5,8 +5,8 @@
     <title>订单列表</title>
 </head>
 <body>
-<h3><span th:text="${#authentication.name}"></span> | <a th:href="@{/logout}">退出</a> </h3>
+<h3><span th:text="${#authentication.name}"></span> | <a th:href="@{/logout}">退出</a></h3>
 <h2>这是订单管理列表页面</h2>
-<h2><a href="http://localhost:8082/memberSystem/member/list">会员列表页面</a></h2>
+<h2><a href="http://127.0.0.1:8082/memberSystem/member/list">会员列表页面</a></h2>
 </body>
 </html>
