--- a/authentication-center/src/main/resources/templates/index.html
+++ b/authentication-center/src/main/resources/templates/index.html
@@ -28,7 +28,8 @@
             <div class="card bg-gradient-danger card-img-holder text-white">
               <div class="card-body">
                 <img src="images/dashboard/circle.svg" class="card-img-absolute" alt="circle-image"/>
-                <h2 class="mb-5"><a href="http://127.0.0.1:8082/memberSystem/member/list" style="color: white">用户管理</a>
+                <h2 class="mb-5"><a href="http://172.23.23.14:8084/member/memberSystem/member/list"
+                                    style="color: white">用户管理</a>
                 </h2>
               </div>
             </div>
@@ -37,7 +38,7 @@
             <div class="card bg-gradient-info card-img-holder text-white">
               <div class="card-body">
                 <img src="images/dashboard/circle.svg" class="card-img-absolute" alt="circle-image"/>
-                <h2 class="mb-5"><a href="http://127.0.0.1:8083/orderSystem/order/list" style="color: white">订单管理</a>
+                <h2 class="mb-5"><a href="http://172.23.23.14:8083/orderSystem/order/list" style="color: white">订单管理</a>
                 </h2>
               </div>
             </div>
